// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services browserNotification newMessage() should create a browser notification 1`] = `
Array [
  Object {
    "body": "body",
    "icon": "/static/private/js/assets/img/icons/logo.png",
    "onClick": [Function],
    "requireInteraction": false,
    "timeout": 5000,
    "title": "title",
  },
]
`;

exports[`services browserNotification newMessage() should create a browser notification with default values (empty values) 1`] = `
Array [
  Object {
    "body": "You received an answer",
    "icon": "/static/private/js/assets/img/icons/logo.png",
    "onClick": [Function],
    "requireInteraction": false,
    "timeout": 5000,
    "title": "Gorgias",
  },
]
`;

exports[`services browserNotification newMessage() should create a browser notification with default values (empty) 1`] = `
Array [
  Object {
    "body": "You received an answer",
    "icon": "/static/private/js/assets/img/icons/logo.png",
    "onClick": [Function],
    "requireInteraction": false,
    "timeout": 5000,
    "title": "Gorgias",
  },
]
`;

exports[`services browserNotification newMessage() should create a browser notification with default values (invalid values) 1`] = `
Array [
  Object {
    "body": "You received an answer",
    "icon": "/static/private/js/assets/img/icons/logo.png",
    "onClick": [Function],
    "requireInteraction": false,
    "timeout": 5000,
    "title": "Gorgias",
  },
]
`;

exports[`services browserNotification newMessage() should create a browser notification with default values (null values) 1`] = `
Array [
  Object {
    "body": "You received an answer",
    "icon": "/static/private/js/assets/img/icons/logo.png",
    "onClick": [Function],
    "requireInteraction": false,
    "timeout": 5000,
    "title": "Gorgias",
  },
]
`;

exports[`services browserNotification newMessage() should display several notifications but play sound once 1`] = `
Array [
  Object {
    "body": "body",
    "icon": "/static/private/js/assets/img/icons/logo.png",
    "onClick": [Function],
    "requireInteraction": false,
    "timeout": 5000,
    "title": "title",
  },
  Object {
    "body": "body",
    "icon": "/static/private/js/assets/img/icons/logo.png",
    "onClick": [Function],
    "requireInteraction": false,
    "timeout": 5000,
    "title": "title",
  },
]
`;

exports[`services browserNotification newMessage() should not throw unhandled promise rejection when the audio playing fails 1`] = `
Array [
  Object {
    "body": "body",
    "icon": "/static/private/js/assets/img/icons/logo.png",
    "onClick": [Function],
    "requireInteraction": false,
    "timeout": 5000,
    "title": "title",
  },
]
`;

exports[`services browserNotification newMessage() should require interaction 1`] = `
Array [
  Object {
    "body": "You received an answer",
    "icon": "/static/private/js/assets/img/icons/logo.png",
    "onClick": [Function],
    "requireInteraction": true,
    "timeout": undefined,
    "title": "Gorgias",
  },
]
`;

exports[`services browserNotification newMessageThrottled() should display a single notification when called several times 1`] = `
Array [
  Object {
    "body": "body",
    "icon": "/static/private/js/assets/img/icons/logo.png",
    "onClick": [Function],
    "requireInteraction": false,
    "timeout": 5000,
    "title": "title",
  },
]
`;
